--- a/3DMyGame.vcxproj
+++ b/3DMyGame.vcxproj
@@ -162,6 +162,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="ArtilleryShell.h" />
     <ClInclude Include="DebugCamera.h" />
     <ClInclude Include="DeviceResources.h" />
     <ClInclude Include="FollowCamera.h" />
@@ -178,6 +179,7 @@
     <ClInclude Include="SwordWeapon.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ArtilleryShell.cpp" />
     <ClCompile Include="DebugCamera.cpp" />
     <ClCompile Include="DeviceResources.cpp" />
     <ClCompile Include="FollowCamera.cpp" />
